fix: adjust spacing on welcome screen and page bg color for better readability

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -3,5 +3,5 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #f7f5fa;
+  background-color: #eae8ed;
 }
